--- a/notebooks/variables/strings.ipynb
+++ b/notebooks/variables/strings.ipynb
@@ -79,7 +79,18 @@
    "execution_count": null,
    "id": "58b57719-afe6-4dcf-a153-184dc168b280",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(planet)"
    ]
@@ -115,7 +126,15 @@
    "execution_count": null,
    "id": "da2b4860-f028-4716-907d-60efc875d649",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mercury\n"
+     ]
+    }
+   ],
    "source": [
     "print(planet)"
    ]
@@ -133,7 +152,18 @@
    "execution_count": null,
    "id": "89fa18e5-b595-4c00-a925-9928393ed6bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "star = 'Sun'\n",
     "type(star)"
@@ -152,7 +182,16 @@
    "execution_count": null,
    "id": "6ac50411-8461-4587-acd3-72fb10040b3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merury doesn't have an atmosphere because it is so close to the Sun\n",
+      "\"We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard\" - JFK\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Merury doesn't have an atmosphere because it is so close to the Sun\")\n",
     "print('\"We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard\" - JFK')"
@@ -206,7 +245,9 @@
   {
    "cell_type": "markdown",
    "id": "324aa354-4066-4490-a8ce-4d7c5e26649d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<li>met de <b>String Formatting Operator</b></li>\n",
     "</ol>"
@@ -214,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "b5006e39-e666-4c9f-8d0f-3e21b4e810c6",
    "metadata": {},
    "outputs": [],
@@ -226,8 +267,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c82af862-5226-472d-821a-5ddd1da812bf",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Being the planet closest to the Sun, Mercury guards its secrets very carefully\n"
+     ]
+    }
+   ],
    "source": [
     "print(formatStr)"
    ]
@@ -245,7 +296,18 @@
    "execution_count": null,
    "id": "a261aff8-ae79-4d7d-9cc3-45ceb2e93878",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "formatStr == fStr == formatOperatorStr"
    ]
@@ -262,12 +324,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "b031bd79-349e-490a-a546-994b098b7a36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Since Mercury is so much closer to the Sun than we are, in the Mercurian sky the Sun appears three times as big as from here on Earth\n",
+      "Since Mercury is so much closer to the Sun than we are, in the Mercurian sky the Sun appears three times as big as from here on Earth\n",
+      "Since Mercury is so much closer to the Sun than we are, in the Mercurian sky the Sun appears three times as big as from here on Earth\n"
+     ]
+    }
+   ],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n",
+    "planet = \"Mercury\"\n",
+    "star = \"Sun\"\n",
+    "myHomePlanet = \"Earth\"\n",
+    "\n",
+    "fStr=f\"Since {planet} is so much closer to the {star} than we are, in the Mercurian sky the {star} appears three times as big as from here on {myHomePlanet}\"\n",
+    "formatStr=\"Since {0} is so much closer to the {1} than we are, in the Mercurian sky the {2} appears three times as big as from here on {3}\".format(planet, star, star, myHomePlanet)\n",
+    "formatOperatorStr=\"Since %s is so much closer to the %s than we are, in the Mercurian sky the %s appears three times as big as from here on %s\" %(planet, star, star, myHomePlanet)\n",
+    "\n",
+    "print(fStr)\n",
+    "print(formatStr)\n",
+    "print(formatOperatorStr)"
    ]
   },
   {
@@ -291,7 +375,16 @@
    "execution_count": null,
    "id": "03dfb7ba-ecd3-4a0c-9b8e-1df72ec0eed2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Venus\n",
+      "Being the planet closest to the Sun, Mercury guards its secrets very carefully\n"
+     ]
+    }
+   ],
    "source": [
     "planet = \"Venus\"\n",
     "print(planet)\n",
@@ -308,12 +401,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "093046a0-ac71-410d-b7f2-fdf9b5f12b08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sentence' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [36]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# print(sentence.replace(\"Mercury\",\"Venus\"))\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msentence\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sentence' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "print(sentence.replace(\"Mercury\",\"Venus\"))\n",
+    "# print(sentence.replace(\"Mercury\",\"Venus\"))\n",
     "print(sentence)"
    ]
   },
@@ -352,16 +457,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "daefaefb-1aee-4cda-b04a-3536eeafab8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So far, KBOs have been seen from distances ranging from 30AU to 50AU from the SUN (for reference, Pluto's average orbit is at about 39AU).\n"
+     ]
+    }
+   ],
    "source": [
-    "object = \"kbo\"\n",
-    "distanceUnit = \"au\"\n",
+    "# Oplossing\n",
+    "\n",
+    "object = \"kbo\".upper()\n",
+    "distanceUnit = \"au\".upper()\n",
     "star = \"SUN\"\n",
     "\n",
-    "# Oplossing"
+    "print(f\"So far, {object}s have been seen from distances ranging from 30{distanceUnit} to 50{distanceUnit} from the {star} (for reference, Pluto's average orbit is at about 39{distanceUnit}).\")"
    ]
   },
   {
@@ -423,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
