--- a/notebooks/variables/strings.ipynb
+++ b/notebooks/variables/strings.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "id": "daefaefb-1aee-4cda-b04a-3536eeafab8f",
    "metadata": {},
    "outputs": [
@@ -465,16 +465,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "So far, KBOs have been seen from distances ranging from 30AU to 50AU from the SUN (for reference, Pluto's average orbit is at about 39AU).\n"
+      "So far, KBOs have been seen from distances ranging from 30AU to 50AU from the Sun (for reference, Pluto's average orbit is at about 39AU).\n"
      ]
     }
    ],
    "source": [
     "# Oplossing\n",
     "\n",
-    "object = \"kbo\".upper()\n",
-    "distanceUnit = \"au\".upper()\n",
+    "object = \"kbo\"\n",
+    "distanceUnit = \"au\"\n",
     "star = \"SUN\"\n",
+    "\n",
+    "object = object.upper()\n",
+    "distanceUnit = distanceUnit.upper()\n",
+    "star = star.title()\n",
     "\n",
     "print(f\"So far, {object}s have been seen from distances ranging from 30{distanceUnit} to 50{distanceUnit} from the {star} (for reference, Pluto's average orbit is at about 39{distanceUnit}).\")"
    ]
