--- a/notebooks/variables/strings.ipynb
+++ b/notebooks/variables/strings.ipynb
@@ -493,10 +493,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "4e38c568-2327-48f2-8925-652179a7c856",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mercury', 'Venus', 'Earth', 'Mars']\n"
+     ]
+    }
+   ],
    "source": [
     "rockyPlanets = \"Mercury, Venus, Earth and Mars\".replace(',','').split()\n",
     "rockyPlanets.remove(\"and\")\n",
@@ -513,10 +521,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "fd14febc-fe4b-435b-ab40-5fdfa2c8a92e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "                Standing on Mercury's surface at its closest approach to the Sun, \n",
+      "                our star would appear more than three times larger than it does on Earth.\n",
+      "                \n"
+     ]
+    }
+   ],
    "source": [
     "multiLineStr = \"\"\"\n",
     "                Standing on Mercury's surface at its closest approach to the Sun, \n",
@@ -524,6 +543,14 @@
     "                \"\"\"\n",
     "print(multiLineStr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30c86ef9-a67d-43a1-99bb-ae8b66be07ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
