--- a/notebooks/variables/booleans.ipynb
+++ b/notebooks/variables/booleans.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "78b5cb38-db60-42f6-8986-0fef1136fe2c",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,12 @@
     "favoritesOfJan = (\"Jan's favoriete fruit is Ananas\")\n",
     "favoritesOfHenk = (\"Henk daarin tegen eet liever een Perzik\")\n",
     "\n",
-    "\"favoritesOfJan\".lower() .rstrip() >=  \"favoritesOfHenk\" .lower() .rstrip()"
+    "\"favoritesOfJan\".lower() .rstrip() >=  \"favoritesOfHenk\" .lower() .rstrip()\n",
+    "\n",
+    "waar = int(True)\n",
+    "nietWaar = int(False)\n",
+    "\n",
+    "waar >= nietWaar"
    ]
   },
   {
@@ -582,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "afaaf4a2-debe-4551-b846-86e0fd5d6276",
    "metadata": {},
    "outputs": [
@@ -592,7 +597,7 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +609,7 @@
     "q = True\n",
     "r = False\n",
     "\n",
-    "p and q != r\n"
+    "r and p and q"
    ]
   },
   {
@@ -667,12 +672,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "45f3678c-3a0f-4f1a-a97c-16220e43bead",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n",
+    "p = False\n",
+    "q = True\n",
+    "r = (p and q)\n",
+    "\n",
+    "q or p or r"
    ]
   },
   {
