Opdracht List Af

--- a/notebooks/variables/lists.ipynb
+++ b/notebooks/variables/lists.ipynb
@@ -42,15 +42,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 2,
->>>>>>> 35f14dd (Opdracht 3 af)
-=======
-   "execution_count": null,
->>>>>>> aa8e58c (Opdracht 3 af)
    "id": "eac2c3b2-52a0-4847-bffc-ad8d2eff0507",
    "metadata": {
     "tags": []
@@ -73,31 +65,19 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
    "execution_count": null,
    "id": "b4aec7a1-ca64-4cdd-b498-5d88ea756b2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Oplossing\n"
-=======
-   "execution_count": 3,
-=======
-   "execution_count": null,
->>>>>>> aa8e58c (Opdracht 3 af)
-   "id": "b4aec7a1-ca64-4cdd-b498-5d88ea756b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Oplossing\n",
     "\n",
     "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
     "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
     "\n",
     "# Oplossing\n",
     "\n",
-    "len(neptuneInnerMoons) == len(neptuneOutermoons)\n"
->>>>>>> 35f14dd (Opdracht 3 af)
+    "len(neptuneInnerMoons) == len(neptuneOutermoons)"
    ]
   },
   {
@@ -110,15 +90,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 6,
->>>>>>> 35f14dd (Opdracht 3 af)
-=======
-   "execution_count": null,
->>>>>>> aa8e58c (Opdracht 3 af)
    "id": "aeadd5cd-2193-4581-8d52-9d085211630a",
    "metadata": {},
    "outputs": [],
@@ -202,11 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD
    "id": "17f8296a-fa18-45d1-9948-707f87b1b694",
-=======
-   "id": "b49facab-981d-4fd6-b982-e8400828fb23",
->>>>>>> aa8e58c (Opdracht 3 af)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +209,36 @@
    "source": [
     "<h3>Excercise 10</h3>\n",
     "<p>Maak een nieuwe lijst <i>lowerMoons</i> met alle <u>neptuneMoons</u> in <u>lowercase</u>.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18b8e92f-e0bf-4247-8a45-70fcd1ee48f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Oplossing 10\n",
+    "\n",
+    "# Maak een nieuwe lijst lowerMoons met alle neptuneMoons in lowercase.\n",
+    "\n",
+    "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
+    "neptuneOuterMoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
+    "\n",
+    "neptuneMoons = []\n",
+    "\n",
+    "\n",
+    "for neptuneOuterMoon in neptuneOuterMoons:\n",
+    "    neptuneMoons.append(neptuneOuterMoon)\n",
+    "    \n",
+    "for neptuneInnerMoon in neptuneInnerMoons:\n",
+    "    neptuneMoons.append(neptuneInnerMoon)\n",
+    "\n",
+    "\n",
+    "lowerMoons = map(lambda moon: moon.lower(), neptuneMoons)\n",
+    "\n",
+    "print(list(lowerMoons))\n",
+    "\n"
    ]
   },
   {
@@ -290,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
