--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -42,15 +42,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "610cb44d-3ec8-413e-9e83-8f7602ab1481",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Because of Mercury's elliptical – egg-shaped – orbit, and sluggish rotation, the Sun appears to rise briefly, set, and rise again from some parts of the planet's surface. The same thing happens in reverse at sunset.\n"
+     ]
+    }
+   ],
    "source": [
     "def printExampleString():\n",
     "    print(\"Because of Mercury's elliptical – egg-shaped – orbit, and sluggish rotation, the Sun appears to rise briefly, set, and rise again from some parts of the planet's surface. The same thing happens in reverse at sunset.\")\n",
     "    \n",
-    "printExampleString()"
+    "printExampleString()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -63,10 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "10ef19a8-1b77-4c99-a3fd-fe4554daa771",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    De docstring is een beschrijving van een functie, die bedoeld is voor de programmeur. \n",
+      "    De Python interpreter negeert deze String\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "def showDocString():\n",
     "    \"\"\"\n",
@@ -95,13 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6c24ec9f-d20e-497c-a3d7-3e28be4ee28f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The meteoroid entered the atmosphere at over 142930 kilometers per hour.\n"
+     ]
+    }
+   ],
    "source": [
     "def milesToKilometers(distance):\n",
-    "    return round(distance * 1.609344, 2)\n",
+    "    return round(distance * 3.609344, 2)\n",
     "\n",
     "distanceInMiles = 11        \n",
     "print( f\"The meteoroid entered the atmosphere at over {int(milesToKilometers(distanceInMiles)*3600)} kilometers per hour.\" )"
@@ -117,13 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9aa67dcd-cf00-43d0-a9f7-94b03f6daf9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A mile is longer than a kilometer and is equivalent to approximately 1.6 kilometers\n"
+     ]
+    }
+   ],
    "source": [
     "def milesToKilometers(distance=1):\n",
-    "    return distance * 1.609344\n",
+    "    return distance * 1.58984594588\n",
     "\n",
     "print(f\"A mile is longer than a kilometer and is equivalent to approximately { round(milesToKilometers(),1) } kilometers\")"
    ]
@@ -139,12 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "62ae6724-341c-4d15-a3ac-7072746d70e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2403461387.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [14]\u001b[0;36m\u001b[0m\n\u001b[0;31m    def poundsToKilos(weight):\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n",
+    "def poundsToKilos(weight):\n",
+    "    return  weight * 0.45359237 \n",
+    "\n",
+    "print (f\"in een Pond zit {()"
    ]
   },
   {
@@ -293,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
