--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -176,26 +176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "62ae6724-341c-4d15-a3ac-7072746d70e8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2403461387.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [14]\u001b[0;36m\u001b[0m\n\u001b[0;31m    def poundsToKilos(weight):\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Een Pound uit gedrukt in kilo's is 0.4536 kilogram. Dus als ik 10 Pound aan vlees bestel krijg bij de slager dan krijg ik 4.5 kilos\n"
      ]
     }
    ],
    "source": [
     "# Oplossing\n",
     "\n",
-    "def poundsToKilos(weight):\n",
+    "def poundsToKilos(weight=1):\n",
     "    return  weight * 0.45359237 \n",
     "\n",
-    "print (f\"in een Pond zit {()"
+    "print(f\"Een Pound uit gedrukt in kilo's is {round(poundsToKilos(),4)} kilogram. Dus als ik 10 Pound aan vlees bestel krijg bij de slager dan krijg ik {round(poundsToKilos(),2) *10 } kilos\")\n"
    ]
   },
   {
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "d62120a0-45df-49f9-9998-41e09c0acb54",
    "metadata": {},
    "outputs": [],
@@ -235,10 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "cf2642fa-be01-43bc-ac74-3f50c74add66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tq\tnot(p and q)\t\u001b[1mdeMorgan1(p, q)\u001b[0m\n",
+      "False\tFalse\tTrue\t\t\u001b[1mTrue\u001b[0m\n",
+      "False\tTrue\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tFalse\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tTrue\tFalse\t\t\u001b[1mFalse\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "logTable = [f\"p\\tq\\tnot(p and q)\\t\\033[1mdeMorgan1(p, q)\\033[0m\"]\n",
     "for p in [False, True]:\n",
@@ -268,12 +279,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "06311702-5a8f-4840-bb3f-5704d14912f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tq\tnot(p and q)\t\u001b[1mdeMorgan1(p, q)\u001b[0m\n",
+      "False\tFalse\tTrue\t\t\u001b[1mTrue\u001b[0m\n",
+      "False\tTrue\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tFalse\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tTrue\tFalse\t\t\u001b[1mFalse\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n",
+    "def deMorgan1(p, q):\n",
+    "    return (not p) and (not q)\n",
+    "\n",
+    "bothFalse = [f\"p\\tq\\tnot(p and q)\\t\\033[1mdeMorgan1(p, q)\\033[0m\"]\n",
+    "for p in [False, True]:\n",
+    "    for q in [False, True]:\n",
+    "        bothFalse.append(f\"{p}\\t{q}\\t{ not (p and q) }\\t\\t\\033[1m{ deMorgan1(p,q) }\\033[0m\")\n",
+    "\n",
+    "print(\"\\n\".join(bothFalse))\n",
+    "\n"
    ]
   },
   {
@@ -324,7 +358,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n"
    ]
   }
  ],
