--- a/notebooks/variables/sets.ipynb
+++ b/notebooks/variables/sets.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "id": "378d36bd-e9cd-41e3-a07a-e2008770347a",
    "metadata": {},
    "outputs": [
@@ -294,8 +294,8 @@
      "output_type": "stream",
      "text": [
       "Be\n",
-      "Lu\n",
-      "eth\n"
+      "Ne\n",
+      "Lux\n"
      ]
     }
    ],
@@ -303,19 +303,18 @@
     "#Oplossing opzet 2\n",
     "\n",
     "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
-    "beneluxList = list(benelux)\n",
-    "beneluxList.sort()\n",
-    "beneluxList[2] = beneluxList[1]\n",
-    "beneluxList[2] = 'Netherlands'\n",
-    "BeNeLux = ''.join(map(str,beneluxList))\n",
-    "print(BeNeLux[0:2])\n",
-    "print(BeNeLux[7:9])\n",
-    "print(BeNeLux[18:21])"
+    "beneluxList_1 = list(benelux)\n",
+    "beneluxList_1.sort()\n",
+    "beneluxList_1[2] = 'Netherlands'\n",
+    "BeNeLux_1 = ''.join(map(str,beneluxList_1))\n",
+    "print(BeNeLux_1[0:2])\n",
+    "print(BeNeLux_1[17:19])\n",
+    "print(BeNeLux_1[7:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 27,
    "id": "8a040fac-b758-4909-a450-1af602c0aaf3",
    "metadata": {},
    "outputs": [
@@ -331,14 +330,14 @@
     " #Oplossing 3\n",
     "\n",
     "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
-    "beneluxList = list(benelux)\n",
-    "beneluxList.sort()\n",
-    "beneluxList[2] = beneluxList[1]\n",
-    "beneluxList[1] = \"Ne\"\n",
-    "beneluxList[0] = \"Be\"\n",
-    "beneluxList[2] = \"Lux\"\n",
-    "BeNeLux = ''.join(map(str,beneluxList))\n",
-    "print(BeNeLux)"
+    "beneluxList_2 = list(benelux)\n",
+    "beneluxList_2.sort()\n",
+    "beneluxList_2[2] = beneluxList_2[1]\n",
+    "beneluxList_2[1] = \"Ne\"\n",
+    "beneluxList_2[0] = \"Be\"\n",
+    "beneluxList_2[2] = \"Lux\"\n",
+    "BeNeLux_2 = ''.join(map(str,beneluxList_2))\n",
+    "print(BeNeLux_2)"
    ]
   },
   {
