--- a/notebooks/variables/lists_with_solutions.ipynb
+++ b/notebooks/variables/lists_with_solutions.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9249ccbd-fc21-469d-a8b9-769f1fbb9551",
    "metadata": {},
    "outputs": [
@@ -164,14 +164,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Despina', 'Galatea', 'Halimede', 'Hippocamp', 'Laomedeia', 'Larissa', 'Naiad', 'Nereid', 'Neso', 'Proteus', 'Psamathe', 'Sao', 'Thalassa', 'Triton']\n"
+      "['Triton', 'Halimede', 'Sao', 'Psamathe', 'Laomedeia', 'Neso', 'Nereid', 'Naiad', 'Thalassa', 'Despina', 'Galatea', 'Proteus', 'Hippocamp', 'Larissa']\n"
      ]
     }
    ],
    "source": [
     "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
     "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
-    "len(neptuneOutermoons)\n",
+    "\n",
     "\n",
     "neptuneMoons = []\n",
     "\n",
