Exercise X+1 en X+2 af

--- a/notebooks/functions.ipynb
+++ b/notebooks/functions.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "06311702-5a8f-4840-bb3f-5704d14912f9",
    "metadata": {},
    "outputs": [
@@ -289,8 +289,8 @@
      "text": [
       "p\tq\tnot(p and q)\t\u001b[1mdeMorgan1(p, q)\u001b[0m\n",
       "False\tFalse\tTrue\t\t\u001b[1mTrue\u001b[0m\n",
-      "False\tTrue\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
-      "True\tFalse\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "False\tTrue\tFalse\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tFalse\tFalse\t\t\u001b[1mFalse\u001b[0m\n",
       "True\tTrue\tFalse\t\t\u001b[1mFalse\u001b[0m\n"
      ]
     }
@@ -304,7 +304,7 @@
     "bothFalse = [f\"p\\tq\\tnot(p and q)\\t\\033[1mdeMorgan1(p, q)\\033[0m\"]\n",
     "for p in [False, True]:\n",
     "    for q in [False, True]:\n",
-    "        bothFalse.append(f\"{p}\\t{q}\\t{ not (p and q) }\\t\\t\\033[1m{ deMorgan1(p,q) }\\033[0m\")\n",
+    "        bothFalse.append(f\"{p}\\t{q}\\t{ not (p or q) }\\t\\t\\033[1m{ deMorgan1(p,q) }\\033[0m\")\n",
     "\n",
     "print(\"\\n\".join(bothFalse))\n",
     "\n"
@@ -320,10 +320,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6ea79e2d-704a-413d-a393-81e4298eb11e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lowest value of digits is 0 and 99 is the highest value\n"
+     ]
+    }
+   ],
    "source": [
     "digits = list( range(0,100,3) )\n",
     "print(f\"The lowest value of digits is { min(digits) } and { max(digits) } is the highest value\")"
@@ -331,10 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "84dfab1b-d3cb-45c2-a6bd-0738b3d10de6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1683"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(digits)"
    ]
@@ -353,14 +372,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c6bf6571-2329-4ef8-b21a-c1f330395f1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of the list = 50.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Oplossing\n",
-    "\n"
+    "\n",
+    "def average(a):\n",
+    "    return sum(a) / len(a)\n",
+    "\n",
+    "a = list ( range(1,100))\n",
+    "averageOfDigits = average(a)\n",
+    "  \n",
+    "print(\"Average of the list =\", round(averageOfDigits, 2))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35fe3419-eaf3-456a-baa9-9f0176f61f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
