--- a/notebooks/variables/lists.ipynb
+++ b/notebooks/variables/lists.ipynb
@@ -257,8 +257,7 @@
     "\n",
     "lowerMoons = map(lambda moon: moon.lower(), neptuneMoons)\n",
     "\n",
-    "print(list(lowerMoons))\n",
-    "\n"
+    "print(list(lowerMoons))"
    ]
   },
   {
@@ -282,14 +281,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f7e1bd63-eae4-4755-9300-4d58673e4a6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'neptuneInnerMoons' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m neptuneInnerMoonsStr \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m,\u001b[38;5;28msorted\u001b[39m(\u001b[43mneptuneInnerMoons\u001b[49m))) \n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m( \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIn order of increasing distance, the list of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(neptuneInnerMoons) \u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m regular Neptune moons is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mneptuneInnerMoonsStr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'neptuneInnerMoons' is not defined"
+     ]
+    }
+   ],
    "source": [
     "neptuneInnerMoonsStr = \", \".join(map(str,sorted(neptuneInnerMoons))) \n",
     "print( f\"In order of increasing distance, the list of { len(neptuneInnerMoons) } regular Neptune moons is {neptuneInnerMoonsStr}.\" )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1178d451-7ba8-4e47-a5b6-7c15752fafd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
