Opdracht Tuple Af

--- a/notebooks/tuples.ipynb
+++ b/notebooks/tuples.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "73948594-ecc9-4e70-90a1-75fd5f48deb0",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "# Oplossing één, oplossing twee is beter\n",
+    "# Oplossing één, oplossing tweede is beter\n",
     "\n",
     "zangers = (\"Nick\", \"Simon\")\n",
     "print(\"%s heeft Minder kans van slagen bij een carrière dan %s\" %(zangers) )"
@@ -354,12 +354,46 @@
     }
    ],
    "source": [
-    "# Oplossing twee\n",
+    "# Oplossing twee, oplossing de derde is nog beter\n",
     "\n",
     "zangers = (\"Nick\", \"Simon\")\n",
     "\n",
-    "print(f\"Van het duo is {zangers [1]} het meeste kansrijk bij een solocarrière.\")\n"
+    "print(f\"Van het duo is {zangers[1]} het meeste kansrijk bij een solocarrière.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "93fa4b1c-64c3-4a70-903b-b288c0ca7915",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "De beste zanger ter wereld is Simon, in Nederland dan.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Oplossing drie\n",
+    "\n",
+    "zangers = (\"Nick\", \"Simon\")\n",
+    "zangersPop = list(zangers)\n",
+    "\n",
+    "zingendePop = zangersPop.pop(1)\n",
+    "\n",
+    "print(F\"De beste zanger ter wereld is {zingendePop}, in Nederland dan.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b6cb358-6521-4f89-9be5-d60852f0ee72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
