--- a/notebooks/variables/lists_with_solutions.ipynb
+++ b/notebooks/variables/lists_with_solutions.ipynb
@@ -215,11 +215,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a7aaf648-0286-434c-b927-e1364d381d5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Triton', 'Halimede', 'Sao', 'Psamathe', 'Laomedeia', 'Neso', 'Nereid', 'Thalassa', 'Despina', 'Galatea', 'Proteus', 'Hippocamp', 'Larissa']\n",
+      "Popped Larissa from neptuneMoons\n",
+      "['Triton', 'Halimede', 'Sao', 'Psamathe', 'Laomedeia', 'Neso', 'Nereid', 'Thalassa', 'Despina', 'Galatea', 'Proteus', 'Hippocamp']\n"
+     ]
+    }
+   ],
    "source": [
+    "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
+    "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
+    "neptuneMoons.remove('Naiad')\n",
+    "print(neptuneMoons)\n",
+    "\n",
     "firstNeptuneMoon = neptuneMoons.pop()\n",
     "print(f\"Popped {firstNeptuneMoon} from neptuneMoons\")\n",
     "print(f\"{neptuneMoons}\")"
@@ -236,10 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "18b8e92f-e0bf-4247-8a45-70fcd1ee48f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['triton', 'halimede', 'sao', 'psamathe', 'laomedeia', 'neso', 'nereid', 'naiad', 'thalassa', 'despina', 'galatea', 'proteus', 'hippocamp', 'larissa']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
