Sets  Exercise 1 Af

--- a/notebooks/variables/numbers.ipynb
+++ b/notebooks/variables/numbers.ipynb
@@ -190,10 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a90e787f-42ea-41d1-85e3-55844e7bfefe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m (\u001b[43ma\u001b[49m \u001b[38;5;241m%\u001b[39m b) \u001b[38;5;241m/\u001b[39m b\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "(a % b) / b"
    ]
@@ -391,6 +403,14 @@
     "d0 = int(d[1:])\n",
     "d1 * math.pow(base,1) + d0 * math.pow(base,0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc09dbb0-59f1-4343-bf80-7b41dcf31ead",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
