Set Exercise 2 af

--- a/notebooks/variables/sets.ipynb
+++ b/notebooks/variables/sets.ipynb
@@ -42,18 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b5ca0430-4eb8-4eeb-a899-151ebbbf7f13",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Pioneer', 'Voyager'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spaceCrafts = set()\n",
     "counter = 0\n",
@@ -71,18 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e8e00fbb-0a04-4754-9fdc-0ea3bc54f43e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Voyager', 'Pioneer'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spaceCrafts = set()\n",
     "counter = 0\n",
@@ -102,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e51fcac8-8062-4c48-bc39-d191f7742c65",
    "metadata": {},
    "outputs": [
@@ -110,11 +94,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'JAPP', 'Pioneer', 'Voyager'}\n"
+      "{'Pioneer', 'TOEVOEGING', 'Voyager'}\n"
      ]
     }
    ],
    "source": [
+    "spaceCrafts = set()\n",
+    "counter = 0\n",
+    "spaceCrafts = {\"Pioneer\", \"Voyager\"}\n",
     "spaceCrafts.add(\"TOEVOEGING\")\n",
     "\n",
     "print(spaceCrafts)"
@@ -131,18 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "065d6065-9d59-47f3-ba49-0c6cd4dd15f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fibonacciList = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]\n",
     "print(fibonacciList)"
@@ -170,15 +149,7 @@
    "execution_count": null,
    "id": "65a28c92-758e-49b9-b2b6-bd78e79e7642",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 34, 5, 8, 233, 377, 13, 144, 21, 55, 89]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#oplidding 1\n",
     "\n",
@@ -190,18 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "002a0381-e20c-443d-8c13-30343046241b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0, 1, 2, 3, 34, 5, 8, 233, 377, 13, 144, 21, 55, 89}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#oplossing 2\n",
     "\n",
@@ -244,18 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "96daa91c-96a8-41a7-b202-6e4a77876ef0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'The Netherlands', 'Luxembourg', 'Belgium'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
     "print(benelux)"
@@ -284,20 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "53417987-3497-4658-a6e1-02d9370b966a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BelgiumLuxembourgThe Netherlands\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Oplossing 1\n",
+    "#Oplossing opzet 1\n",
     "\n",
     "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
     "benelux = list(benelux)\n",
@@ -309,27 +256,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "732f6453-5268-4397-a17c-09fad1e69a83",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "replace() argument 2 must be str, not int",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [31]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m benelux \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(benelux)\n\u001b[1;32m      3\u001b[0m BeNeLux \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m,benelux))\n\u001b[0;32m----> 4\u001b[0m BeNeLux \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mstr\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mT\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(BeNeLux)\n",
-      "\u001b[0;31mTypeError\u001b[0m: replace() argument 2 must be str, not int"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Oplossing opzet 2\n",
+    "\n",
     "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
     "benelux = list(benelux)\n",
+    "benelux.sort()\n",
+    "benelux[2] = benelux[1]\n",
+    "benelux[1] = 'Netherlands'\n",
     "BeNeLux = ''.join(map(str,benelux))\n",
-    "BeNeLux = str.replace('T', '', 1) \n",
+    "print(BeNeLux[0:2])\n",
+    "print(BeNeLux[7:9])\n",
+    "print(BeNeLux[18:21])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973d0f51-c9f9-4335-883c-c1977ae839cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Oplossing 3\n",
+    "\n",
+    "\n",
+    "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
+    "benelux = list(benelux)\n",
+    "benelux.sort()\n",
+    "benelux[2] = benelux[1]\n",
+    "benelux[1] = \"Ne\"\n",
+    "benelux[0] = \"Be\"\n",
+    "benelux[2] = \"Lux\"\n",
+    "BeNeLux = ''.join(map(str,benelux))\n",
     "print(BeNeLux)"
    ]
   },
@@ -364,19 +326,7 @@
    "execution_count": null,
    "id": "a0d796dc-7580-4937-a2cc-09d5b5c4e432",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib_venn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib_venn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m venn2, venn3\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib_venn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib_venn import venn2, venn3\n",
     "from matplotlib import pyplot as plt"
@@ -400,23 +350,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "1a90d4ce-5d4b-45eb-becb-9a041ee81510",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'venn3' is not defined",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib_venn'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mvenn3\u001b[49m([benelux, nordics, baltics], (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBenelux\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNordics\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBaltics\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'venn3' is not defined"
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib_venn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m venn2, venn3\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n\u001b[1;32m      4\u001b[0m venn3([benelux, nordics, baltics], (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBenelux\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNordics\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBaltics\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib_venn'"
      ]
     }
    ],
    "source": [
+    "from matplotlib_venn import venn2, venn3\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
     "venn3([benelux, nordics, baltics], ('Benelux', 'Nordics', 'Baltics'))\n",
     "plt.show()"
    ]
