--- a/notebooks/variables/strings.ipynb
+++ b/notebooks/variables/strings.ipynb
@@ -451,10 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fd14febc-fe4b-435b-ab40-5fdfa2c8a92e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "                Standing on Mercury's surface at its closest approach to the Sun, \n",
+      "                our star would appear more than three times larger than it does on Earth.\n",
+      "                \n"
+     ]
+    }
+   ],
    "source": [
     "multiLineStr = \"\"\"\n",
     "                Standing on Mercury's surface at its closest approach to the Sun, \n",
